ingress/service_ingress_controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-endpoint
  labels:
    app: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ingress-nginx
